# learn-github-apps

./: .pre-commit-config.yaml  compose.yaml  project.toml  pyproject.toml  test.html  test.py  text.txt
.github/: dependabot.yaml  mergeable.yml  renovate.json5  settings.yml
.github/workflows/: workflow.yaml
template/: .pre-commit-config.yaml  index.html
template/.github/workflows/: template_workflow.yaml
template/users/: another_one.html
