[project]
name = "learn-github-apps"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav Khlud",email = "stanislav.khlud@saritasa.com"}
]
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "django==5.1.15",
]

[dependency-groups]
dev = [
    "saritasa-invocations==1.0.0",
]
local =[
    "redis==6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
