[tool.poetry]
package-mode = false

[project]
name = "{{ subdomain }}"
version = "0.0.0"
classifiers = [
  "Private :: Do Not Upload",
]
requires-python = "=={{ python_version }}.*"
dependencies = [
    "django==5.0.0",
]

[dependency-groups]
dev = [
    "saritasa-invocations==1.0.0",
]
local =[
    "redis==7.2.0",
]
